test/basic/good/core006.lat
int main() {
	int x=1, y=2, z;
	return 0;
}
