test/basic/bad/core007.lat
int main(){
	int x, y=true, z="asdf";
	int x;
	return 0;
}
